--- a/makefile.vpk
+++ b/makefile.vpk
@@ -1,5 +1,6 @@
-
-
+mkfile_path := $(abspath $(lastword $(MAKEFILE_LIST)))
+mkfile_dir_path := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
+current_dir := $(notdir $(patsubst %/,%,$(dir $(mkfile_path))))
 
 all:
-			cd ../build && voc -s ../dps/postgres/src/postgres.Mod
+			voc -s $(mkfile_dir_path)/src/postgres.Mod
